# Statscript-suite

./: .gitattributes  .gitignore  .pre-commit-config.yaml  JUSTFILE_GUIDE.md  LICENSE  README.md  ROADMAP.md  USAGE_GUIDE.md  V1_ROADMAP.md
.github/workflows/: docs.yml  test.yml
engine/: pyproject.toml  statscrypt.spec
engine/docs/: conf.py  index.rst
engine/docs/api/: index.rst
engine/src/statscrypt/: cli.py  repl.py
engine/src/statscrypt/commands/: data_mgmt.py  stats.py  viz.py
engine/src/statscrypt/core/: exceptions.py  expression.py  parser.py  session.py  tokenizer.py
engine/tests/: test_conditions.py  test_data_mgmt.py  test_gen_arithmetic.py  test_parser_and_executor.py  test_regress_correlate.py  test_tabulate.py  test_tokenizer.py  test_ttest.py
gui/: Justfile  STARTUP_GUIDE.md  package-lock.json  package.json  start  start.bat  start.cmd  start.ps1  start.sh
gui/src/: graph.html  index.html  main.js  renderer.js
shared/: sample.csv
