[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statscrypt"
version = "1.0.0"
description = "A Python-based interpreter for Stata-like statistical scripting."
license = {text = "MIT"}
authors = [{name = "Statscrypt Contributors"}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
dev = [
    "pyinstaller>=5.0",
]

[project.scripts]
statscrypt = "statscrypt.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
